cpp/test/Slice/errorDetection/EnumeratorRedefinition.err
EnumeratorRedefinition.ice:12 error: redefinition of enumerator `B'
EnumeratorRedefinition.ice:12 error: redefinition of enumerator `A'
