cpp/test/Slice/errorDetection/EnumeratorRedefinition.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

enum Enum1 { A, B, C };
enum Enum2 { A, B, E };
